src/test/ui/or-patterns/non-exhaustive.stderr
warning: the feature `or_patterns` is incomplete and may cause the compiler to crash
  --> $DIR/non-exhaustive.rs:1:12
   |
LL | #![feature(or_patterns)]
   |            ^^^^^^^^^^^

error[E0004]: non-exhaustive patterns: `Some(Baz)` not covered
  --> $DIR/non-exhaustive.rs:12:11
   |
LL |     match pat {
   |           ^^^ pattern `Some(Baz)` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `Some(_)` not covered
  --> $DIR/non-exhaustive.rs:19:11
   |
LL |     match pat {
   |           ^^^ pattern `Some(_)` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `Some(StructLike { .. })` not covered
  --> $DIR/non-exhaustive.rs:34:11
   |
LL |     match pat {
   |           ^^^ pattern `Some(StructLike { .. })` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0004`.
